# gazelle-ext

./: .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  analysis.scm  extension.go  extension_test.go  go.bzl  go.mod  go.sum
